src/app.css
.app {
  display: flex;
  flex-direction: column;
  min-width: 375px;
}

/* ---------- Light Mode ---------- */
:root {
    --bg: #BDDBD5;
    --text: #21375E;

    --header-bg: #4A7193;
    --nav-bg: #A36C48;
    --footer-bg: #4A7193;

    --accent: #EFD092;

  /* Text color for header/nav/footer */
    --section-text: #21375E;
}

.container-fluid {
    padding-left: 0;
    padding-right: 0;
}

/* ---------- Dark Mode ---------- */
[data-theme="dark"] {
    --bg: #1A2538;
    --text: #D7E7E4;

    --header-bg: #2F4A63;
    --nav-bg: #7A4F34;
    --footer-bg: #2F4A63;

    --accent: #EFD092;

    --section-text: #D7E7E4;

    --button-text: #2F4A63;

    --svg-stroke: #1A2538;
}

/* ---------- Typography ---------- */
.nunito-font,
body {
    font-family: "Nunito", sans-serif;
    font-optical-sizing: auto;
    font-weight: 200;
    font-style: normal;
}

/* ---------- Body ---------- */
body {
    background: var(--bg);
    color: var(--text);
}

/* ---------- Header ---------- */
header {
    background: var(--header-bg);
    display: flex;
    justify-content: space-between;
    color: var(--section-text);
}

header > img {
    width: 100px;
    height: 100px;
}

header > nav {
    background: var(--nav-bg);
    display: flex;
    padding: 1%;
    margin: 1%;
    color: var(--section-text);
}

/* ---------- Main ---------- */
main {
    background: var(--bg);
    color: var(--text);
}

/* ---------- Footer ---------- */
footer {
  background: var(--footer-bg);
  padding: 1%;
  display: flex;
  justify-content: center;
  color: var(--section-text);
}

footer a {
    color: var(--bg);
}

/* ---------- Navigation Text ---------- */
nav h2,
nav ul,
nav li,
nav a {
    color: var(--section-text);
}

nav a {
    text-decoration: none;
}

nav a:hover {
    text-decoration: underline;
}

/* ---------- Button ---------- */
button {
  background: var(--accent);
  color: var(--button-text);
}

form,
/* input, */
button,
label {
  background: var(--bg);
  color: var(--text);
  border: 1px solid var(--text);
}

/* ---------- SVG ---------- */
svg {
    stroke: var(--svg-stroke);
    fill: var(--svg-stroke);
    height: 100px;
    width: 100px;
}

#nav_book, #nav_lightbulb {
    stroke: none;
}

#nav_people {
    fill: none;
}

